--- a/dashboard.html
+++ b/dashboard.html
@@ -22,9 +22,7 @@
       <main id="main-content" class="main-content">
         <div id="topbar-component"></div>
         <div class="content-wrapper">
-          <h1 class="main-content-title">
-            Selamat Datang, Muhammad Fadjar Yulianto
-          </h1>
+          <h1 class="main-content-title">Selamat Datang, Mahasiswa</h1>
 
           <div class="dashboard-cards">
             <section class="card" aria-labelledby="status-title">
